k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: fintech
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: fintech-app
        image: 999568710647.dkr.ecr.us-east-2.amazonaws.com/fintech-app:latest
        ports:
        - containerPort: 8080
